responsive design fixes. added overflow: hidden; to cards container box to pervent 'helado' overflow

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -16,10 +16,10 @@ h1 {
 }
 
 h2 {
-    margin-top: $baseline;
+    margin-top: $small;
     color: $grey-5;
 }
 
 header {
-    padding-top: $xl;
+    padding-top: $baseline;
 }
