--- a/src/components/PhotoCards.scss
+++ b/src/components/PhotoCards.scss
@@ -4,15 +4,19 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-bottom: $xl;
+    margin-top: $xxl;
+    @media (max-width: 600px) {
+        margin-top: 0;
+    }
   }
   
   .word-card {
     flex: 0 1 30%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 2px rgba(0,0,0,0.2);
     transition: 0.3s;
     padding: 12px 16px;
     margin-bottom: $large;
@@ -21,16 +25,37 @@
     min-height: 400px;
     max-height: 400px;
     max-width: 250px;
-  
+    @media (max-width: 600px) {
+        flex: 0 1 40%;
+        min-height: 300px;
+        max-height: 250px;
+        // min-width: 100px;
+    }
+
     &:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     }
+
+    h3 {
+        padding-bottom: $xs;
+    }
+
+    .card-image-wrapper {
+        overflow: hidden;
+        max-width: 200px;
+        max-height: 160px;
+        @media (max-width: 600px) {
+            &:last-child {
+                // margin-top: $xs;
+            }
+        }
+    }
   
     img {
-        max-width: 200px;
-        max-height: 200px;
+        object-fit: contain;
+        max-width: 100%;
+        max-height: 100%;
         border-radius: 5px 5px 0 0;
-        margin-top: $small;
     }
 
     .loading-wheel {
